# The-War-In-Columbia-WIP

./: .gitignore  CRASH_ANALYSIS.md  ENGINE_INTERNALS.md  README.md  SDK_MAP.md  TODO.md  _debug_exports.py  settings.json  war_in_columbia.py
native/: CMakeLists.txt  exe_spawn_strings.txt  exe_vm_strings.txt  exe_wide_strings.txt  winmm_exports.txt
native/analysis/: ADDRESSES.md  ak_exports.py  ak_nearest.py  c_642d90.txt  c_spawnactor.txt  check_drm.py  d_4c5f30.txt  d_642d90.txt  d_aichain.txt  d_aichain2.txt  d_aispawn.txt  d_crash.txt  d_execspawn.txt  d_fname.txt  d_funcB.txt  d_getpathname.txt  d_getpathname2.txt  d_pathname.txt  d_spawnactor.txt  d_spawnactor2.txt  find_gnames.py  gnames_out.txt  name_natives.txt  rtti_out.txt  spawn_natives.txt  ue3_analyze.py  verify.txt
native/src/: mem_monitor.cpp  mem_monitor.h  ue3_spawn.cpp  ue3_spawn.h  winmm_forwards.h  winmm_proxy.cpp  winmm_proxy.def
native/tools/: analyze_consolecommand.py  analyze_exec_funcs.py  analyze_loadpkg.py  check_all_weapons.py  check_mem_strings.py  check_skyhook_owner.py  compare_weapons.py  count_vigor_strings.py  decompress_pkg.py  dump_attrib_struct.py  dump_bronco.py  dump_exec_cc.py  dump_possession_dtypes.py  dump_vigor_energy.py  dump_xweapon_props.py  explore_pawn_inventory.py  explore_pawn_v2.py  explore_playercontroller.py  find_all_crows.py  find_all_vigor_instances.py  find_ammo_and_vend.py  find_ammo_offsets.py  find_ammo_v2.py  find_bronco.py  find_cheat_fnames.py  find_console_exec.py  find_console_instance.py  find_dlc_defaults.py  find_engine_globals.py  find_fire_rate.py  find_gobjects.py  find_itemdb_props.py  find_loadpackage.py  find_loadpkg_func.py  find_loadpkg_v2.py  find_max_ammo_off.py  find_offset_field.py  find_pc_from_localplayer.py  find_player_vigors.py  find_player_weapons.py  (+30 more)
native/tools/dlc_dump/: Package_Plasmid_WinterBolt.txt  StaticMesh_Plasmid_WinterBolt.txt  XActorSpawningProjectile_Plasmid_WinterBolt_TapProjectile.txt  XDLCBDamageType_BeamCannonDLCBDamage.txt  XDLCBDamageType_Plasmid_WinterBolt_TapDamage.txt  XDamageType_WinterBolt_HoldGrenade_Damage.txt  XWeaponChameleon_Plasmid_Chameleon.txt  XWeaponCharge_Plasmid_Charge.txt  XWeaponMurderOfCrows_Plasmid_MurderOfCrowsBase.txt  XWeaponReturnToSender_Plasmid_ReturnToSenderBase.txt  XWeaponReturnToSender_Plasmid_ReturnToSenderInsta.txt  XWeaponRollingThunder_Plasmid_BuckingBroncoBase.txt  XWeaponUndertow_Plasmid_UndertowBase.txt  XWeaponWinterbolt_Plasmid_WinterBolt.txt  XWeapon_Plasmid_DevilsKiss.txt  XWeapon_Plasmid_VoltSwarmFounder.txt  _DLC_DamageTypes.txt
native/tools/dlc_dumper/: DlcDumper.csproj  Program.cs
native/tools/dlcc_dump/: Package_Plasmid_WinterBolt.txt  StaticMesh_Plasmid_WinterBolt.txt  (+18 more)
(+20 files in other folders)
